--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -81,10 +81,15 @@
     <script src="application/services/AuthenticationService.js"></script>
     <script src="application/services/project-service.js"></script>
     <script src="application/services/user-service.js"></script>
+    <script src="application/services/role-service.js"></script>
 
     <script src="application/controllers/login-controller.js"></script>
     <script src="application/controllers/project-controller.js"></script>
     <script src="application/controllers/user-controller.js"></script>
+    <script src="application/controllers/role-list-controller.js"></script>
+    <script src="application/controllers/create-role-controller.js"></script>
+    <script src="application/controllers/update-role-controller.js"></script>
+    <script src="application/controllers/remove-role-dialog-controller.js"></script>
 
     
 
