--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/theme.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="application/directives/tree-detail-view/tree.css" />
     <!--<link rel="stylesheet" href="lib/ng-table-bundle/ng-table.min.css" />-->
     <!--<link rel="stylesheet" href="lib/bootstrap/less/bootstrap.less" />-->
     <!-- Bootstrap Material Design -->
@@ -91,6 +92,7 @@
     <script src="application/services/project-service.js"></script>
     <script src="application/services/user-service.js"></script>
     <script src="application/services/role-service.js"></script>
+    <script src="application/services/project-service-tmp.js"></script>
 
     <script src="application/controllers/login-controller.js"></script>
     <script src="application/controllers/project-controller.js"></script>
@@ -101,10 +103,12 @@
     <script src="application/controllers/remove-role-dialog-controller.js"></script>
     <script src="application/controllers/assign-controller.js"></script>
     <script src="application/controllers/delegate-controller.js"></script>
+    <script src="application/controllers/project-details-controller.js"></script>   
+    <script src="application/controllers/tree-controller.js"></script>
 
-
-
-    
+    <script src="application/directives/tree-detail-view/container-directive.js"></script>
+    <script src="application/directives/tree-detail-view/details-directive.js"></script>
+    <script src="application/directives/tree-detail-view/tree-directive.js"></script>
 
     <!--<script src="demo.js"></script>-->
 
