completed project details v1.0 and added hour type management

--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -124,6 +124,7 @@
     <script src="application/services/user-service.js"></script>
     <script src="application/services/role-service.js"></script>
     <script src="application/services/project-service-tmp.js"></script>
+    <script src="application/services/hour-type-service.js"></script>
 
     <script src="application/controllers/login-controller.js"></script>
     <script src="application/controllers/project-controller.js"></script>
@@ -136,6 +137,10 @@
     <script src="application/controllers/delegate-controller.js"></script>
     <script src="application/controllers/project-details-controller.js"></script>   
     <script src="application/controllers/developer-assignment-controller.js"></script>
+    <script src="application/controllers/hour-types-list-controller.js"></script>
+    <script src="application/controllers/create-hour-type-controller.js"></script>
+    <script src="application/controllers/update-hour-type-controller.js"></script>
+    <script src="application/controllers/remove-hour-type-modal-controller.js"></script>
 
     <script src="application/directives/tree-detail-view/details-directive.js"></script>
     <script src="application/directives/tree-detail-view/tree-directive.js"></script>
