added assignment type management v1.0

--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -125,6 +125,7 @@
     <script src="application/services/role-service.js"></script>
     <script src="application/services/project-service-tmp.js"></script>
     <script src="application/services/hour-type-service.js"></script>
+    <script src="application/services/assignment-type-service.js"></script>
 
     <script src="application/controllers/login-controller.js"></script>
     <script src="application/controllers/project-controller.js"></script>
@@ -141,6 +142,10 @@
     <script src="application/controllers/create-hour-type-controller.js"></script>
     <script src="application/controllers/update-hour-type-controller.js"></script>
     <script src="application/controllers/remove-hour-type-modal-controller.js"></script>
+    <script src="application/controllers/assignment-type-list-controller.js"></script>
+    <script src="application/controllers/create-assignment-type-controller.js"></script>
+    <script src="application/controllers/update-assignment-type-controller.js"></script>
+    <script src="application/controllers/remove-assignment-type-dialog-controller.js"></script>
 
     <script src="application/directives/tree-detail-view/details-directive.js"></script>
     <script src="application/directives/tree-detail-view/tree-directive.js"></script>
