--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -146,6 +146,8 @@
     <script src="application/controllers/create-assignment-type-controller.js"></script>
     <script src="application/controllers/update-assignment-type-controller.js"></script>
     <script src="application/controllers/remove-assignment-type-dialog-controller.js"></script>
+    <script src="application/controllers/remove-project-dialog-controller.js"></script>
+
 
     <script src="application/directives/tree-detail-view/details-directive.js"></script>
     <script src="application/directives/tree-detail-view/tree-directive.js"></script>
