--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -77,6 +77,7 @@
             $rootScope.$on("userAuthenticated", function (event, user) {
                 $scope.currentUser = user;
                 $state.go('projectList');
+                console.log(user);
             });
 
             $scope.listUser = function ($event) {
@@ -231,8 +232,8 @@
                 <ul class="nav sidebar-menu">
                     <!--<li class="sidebar-label">Menu</li>-->
 
-                    <li ng-click="toggleMenu($event,open);">
-                        <a>
+                    <li ng-click="toggleMenu($event,open);" ng-show="currentUser.role.name == 'ADMIN'">
+                        <a class="accordion-toggle">
                             <span class="glyphicon glyphicon-home"></span>
                             <span class="sidebar-title">Gestión de Admon</span>
                             <span class="caret"></span>
@@ -282,7 +283,8 @@
                             </li>
                         </ul>
 
-                    <li ng-click="toggleMenu($event,open);">
+                    </li>
+                    <li ng-click="toggleMenu($event,open);" ng-show="currentUser.role.name == 'OM'">
                         <a>
                             <span class="glyphicon glyphicon-home"></span>
                             <span class="sidebar-title">Gestión de Proyectos</span>
@@ -309,7 +311,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li ng-show="currentUser.role.name == 'PM' || currentUser.role.name == 'TAM'">
                         <a>
                             <span class="glyphicon glyphicon-home"></span>
                             <span class="sidebar-title" ng-click="ir();">Gestion de Horas</span>
