--- a/InfoWeb.Presentation/wwwroot/application/directives/tree-detail-view/details.html
+++ b/InfoWeb.Presentation/wwwroot/application/directives/tree-detail-view/details.html
@@ -10,7 +10,7 @@
         <tr ng-repeat="assignment in assignments">
             <td>{{assignment.date | date:"dd/MM/yyyy"}}</td>
             <td>{{assignment.hours}}</td>
-            <td>{{assignment.hourTypeId}}</td>            
+            <td>{{assignment.hourType.name}}</td>            
         </tr>
     </tbody>
 </table>
