--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -215,7 +215,7 @@
                 <li class="dropdown ">
                     <a href="#" class="dropdown-toggle fw600 p15">
                         <img src="images/nophoto.jpg" alt="avatar" class="mw30 br64">
-                        <span> UsuarioLogueado</span>
+                        <span>{{currentUser.name}}</span>
                         <span class="caret"></span>
                     </a>                   
                 </li>
