--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -206,11 +206,16 @@
             <div class="row">
                 <div class="col-md-12 col-lg-12 col-md-12 col-xs12">
                     <header id="headerStyle" class="navbar navbar-fixed-top bg-primary col-s12" ng-show="currentUser != null">
-                        <div>
-                            <h2 class="pull-left">
-                                <a href="javascript:void(0)" style="margin-left:20px">InfoWeb</a>
-                            </h2>  
+                        <div class="row">
+                            <div>
+                                <h2 class="pull-left">
+                                    <a href="javascript:void(0)" style="margin-left:20px">InfoWeb</a>
+                                </h2>  
+                            </div>                            
+                            
                             <div class="dropdown pull-right" style="display:inline-block;margin-right:13px" id="styleSalir">
+                                <button type="button" id="notification" class="btn btn-primary">Mensajes <span class="badge">0</span></button>
+
                                 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="padding:6px;margin-right:10px;color:#fff !important">
                                     <img src="images/nophoto.jpg" alt="avatar" class="mw30 br64">
                                     {{currentUser.name}}
