--- a/InfoWeb.Presentation/wwwroot/Index.html
+++ b/InfoWeb.Presentation/wwwroot/Index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="lib/bootstrap-material-design/dist/css/ripples.min.css">-->
     <!--Theme-->
     <link rel="stylesheet" href="css/theme.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <!--Ng-Table-->
     <link rel="stylesheet" href="lib/ng-table-bundle/ng-table.min.css" />
 
@@ -213,6 +214,7 @@
     <script src="application/directives/tree-detail-view/tree-directive.js"></script>
 
     <!--<script src="demo.js"></script>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body ng-app="InfoWeb">
@@ -224,7 +226,7 @@
                     <header id="headerStyle" class="navbar navbar-fixed-top bg-primary col-s12" ng-show="currentUser != null">
                         <div class="row">
                             <div>
-                                <h2 class="pull-left">
+                                <h2 class=" col-md-offset-0 col-md-1 col-lg-offset-0 col-lg-1 col-sm-offset-4 col-sm-1">
                                     <span id="titleSite" style="margin-left:20px;color:#fff">InfoWeb</span>
                                 </h2>
                             </div>
@@ -236,14 +238,14 @@
                                             <span style="color:#000">Recientes</span>
 
                                         </div>
-                                        <hr style="margin-bottom:-2px !important"/>
+                                        <hr style="margin-bottom:-2px !important" />
                                         <div id="listNotifications">
                                             <table class="table table-hover" ng-show="notifications.length != 0">
                                                 <tr ng-repeat="notification in notifications" style="cursor:pointer">
                                                     <td>
                                                         <div style="text-align:left;font-size:13px" class="pull-left">
                                                             <span style="color:#696969"><span class="glyphicon glyphicon-tag" style="margin-right:5px"></span>{{notification.message}}</span>
-                                                        </div>                                                       
+                                                        </div>
                                                     </td>
                                                     <!--<td>
                                                         <div class="pull-right vl" style="color:#C0C0C0;padding-top:10px;padding-left:5px">
@@ -277,125 +279,133 @@
                     </header>
                 </div>
             </div>
+            
             <div class="row">
                 <div class="col-md-2 col-lg-2 hidden-sm">
-                    <aside id="sidebar_left" class="nano nano-light affix sidebar-dark has-scrollbar hidden-xs" ng-show="currentUser != null">
+                    <div class="row">
+                        <aside id="sidebar_left" class="nano nano-light affix sidebar-dark has-scrollbar hidden-xs" ng-show="currentUser != null">
 
-                        <!-- Start: Sidebar Left Content -->
-                        <div class="sidebar-left-content nano-content" style="margin-right: -17px; margin-top: 30px;">
-                            <!-- Start: Sidebar Header -->
-                            <header class="sidebar-header"></header>
-                            <ul class="nav sidebar-menu">
-                                <!--<li class="sidebar-label">Menu</li>-->
+                            
 
-                                <li ng-click="toggleMenu($event,open);" ng-show="currentUser.role.name == 'ADMIN'">
-                                    <a class="accordion-toggle">
-                                        <span class="glyphicon glyphicon-home"></span>
-                                        <span class="sidebar-title">Gestión de Admon</span>
-                                        <span class="caret"></span>
-                                    </a>
-                                    <ul class="nav sub-nav" ng-class="{'toggleOn': open,'toggleOff': open}" ng-show="open" style="margin-left:10px;">
-                                        <li>
-                                            <a ng-click="listProject($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title" ng-show="currentUser.role.name != 'ADMIN'">Ver Proyectos</span>
-                                                <span class="sidebar-title" ng-show="currentUser.role.name == 'ADMIN'">Gestión de Proyectos</span>
+                            <!-- Start: Sidebar Left Content -->
+                            <div class="sidebar-left-content nano-content" style="margin-right: -17px; margin-top: 30px;">
+                                <!-- Start: Sidebar Header -->
+                                <header class="sidebar-header"></header>
+                                <ul class="nav sidebar-menu">
+                                    <!--<li class="sidebar-label">Menu</li>-->
 
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a ng-click="asignar($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Asignar Proyectos</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a ng-click="listUser($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Gestionar Usuarios</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a ng-click="listHourTypes($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Gestionar Tipos de Hora</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a ng-click="listAssignmentTypes($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Gestionar Tipos de Asignación</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a ng-click="listClient($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Gestionar Clientes</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a ng-click="listRoles($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Gestionar Roles</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a ng-click="listProjectTypes($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Gestionar Tipos de Proyectos</span>
-                                            </a>
-                                        </li>
-                                    </ul>
+                                    <li ng-click="toggleMenu($event,open);" ng-show="currentUser.role.name == 'ADMIN'">
+                                        <a class="accordion-toggle">
+                                            <span class="glyphicon glyphicon-home"></span>
+                                            <span class="sidebar-title">Gestión de Admon</span>
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="nav sub-nav" ng-class="{'toggleOn': open,'toggleOff': open}" ng-show="open" style="margin-left:10px;">
+                                            <li>
+                                                <a ng-click="listProject($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title" ng-show="currentUser.role.name != 'ADMIN'">Ver Proyectos</span>
+                                                    <span class="sidebar-title" ng-show="currentUser.role.name == 'ADMIN'">Gestión de Proyectos</span>
 
-                                </li>
-                                <li ng-click="toggleMenu($event,open);" ng-show="currentUser.role.name == 'OM'">
-                                    <a>
-                                        <span class="glyphicon glyphicon-home"></span>
-                                        <span class="sidebar-title">Gestión de Proyectos</span>
-                                        <span class="caret"></span>
-                                    </a>
-                                    <ul class="nav sub-nav" ng-class="{'toggleOn': open,'toggleOff': open}" ng-show="open" style="margin-left:10px;">
-                                        <li>
-                                            <a ng-click="listProject($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Ver Proyectos</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a ng-click="delegate($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Delegar Proyecto</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a ng-click="assignHours($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Asignar Horas</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li ng-click="toggleMenu($event,open);" ng-show="currentUser.role.name == 'PM' || currentUser.role.name == 'TAM'">
-                                    <a>
-                                        <span class="glyphicon glyphicon-home"></span>
-                                        <span class="sidebar-title" ng-click="ir();">Gestión de Horas</span>
-                                        <span class="caret"></span>
-                                    </a>
-                                    <ul class="nav sub-nav" ng-class="{'toggleOn': open,'toggleOff': open}" ng-show="open" style="margin-left:10px;">
-                                        <li>
-                                            <a ng-click="assignHours($event);">
-                                                <span class="glyphicon glyphicon-calendar"></span>
-                                                <span class="sidebar-title">Asignar Horas</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </aside>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a ng-click="asignar($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Asignar Proyectos</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a ng-click="listUser($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Gestionar Usuarios</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a ng-click="listHourTypes($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Gestionar Tipos de Hora</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a ng-click="listAssignmentTypes($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Gestionar Tipos de Asignación</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a ng-click="listClient($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Gestionar Clientes</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a ng-click="listRoles($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Gestionar Roles</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a ng-click="listProjectTypes($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Gestionar Tipos de Proyectos</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+
+                                    </li>
+                                    <li ng-click="toggleMenu($event,open);" ng-show="currentUser.role.name == 'OM'">
+                                        <a>
+                                            <span class="glyphicon glyphicon-home"></span>
+                                            <span class="sidebar-title">Gestión de Proyectos</span>
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="nav sub-nav" ng-class="{'toggleOn': open,'toggleOff': open}" ng-show="open" style="margin-left:10px;">
+                                            <li>
+                                                <a ng-click="listProject($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Ver Proyectos</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a ng-click="delegate($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Delegar Proyecto</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a ng-click="assignHours($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Asignar Horas</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li ng-click="toggleMenu($event,open);" ng-show="currentUser.role.name == 'PM' || currentUser.role.name == 'TAM'">
+                                        <a>
+                                            <span class="glyphicon glyphicon-home"></span>
+                                            <span class="sidebar-title" ng-click="ir();">Gestión de Horas</span>
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="nav sub-nav" ng-class="{'toggleOn': open,'toggleOff': open}" ng-show="open" style="margin-left:10px;">
+                                            <li>
+                                                <a ng-click="assignHours($event);">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                    <span class="sidebar-title">Asignar Horas</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </aside>
+                    </div>
                 </div>
                 <div id="content" class="col-md-10 col-lg-10 -col-sm-12 col-xs-12">
-                    <div ui-view>
+                    <div class="row">
+                        <div ui-view>
+                        </div>
                     </div>
                 </div>
             </div>
